# YT-RAG-Project

./: main.py  opencode.txt  pyproject.toml  yt_rag.db
Databases/UserDB/: database.py
Databases/Vector/: pinecone_client.py
Indexing/: chunker.py  embedder.py  pipeline.py
Models/: models.py
Prompts/: prompt.py
Schema/: schema.py
backend/: app.py  auth.py  config.py
backend/routers/: users.py  youtube.py
backend/services/: youtube.py
frontend/: index.html
frontend/templates/: account.html  dashboard.html  login.html  register.html
