[project]
name = "yt-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "opendataloader-pdf>=2.4.7",
    "pinecone>=9.1.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
    "youtube-transcript-api>=1.2.4",
]
